<resources>
    <string name="app_name">ChatApplication</string>
    <string name="title_activity_user__service">User_Service</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user__data__drawer">User_Data_Drawer</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_drawer__slider">Drawer_Slider</string>
    <string name="title_activity_navigation_bar">NavigationBar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tap_any_where">Tap any where</string>
    <string name="this_application_provided_by_zeon_team">This Application Provided By Zeon Team</string>
    <string name="copyright_by_zeon_team">Copyright By Zeon Team</string>
    <string name="swipe">Swipe</string>
    <string name="chat_and_security">Chat and Security</string>
    <string name="make_a_security_text_with_your_friends">Make a security text with your friends</string>
    <string name="continue1">Continue</string>

    <string name="make_new_groups">New groups</string>
    <string name="make_new_groups_with_friends_and_enjoy_chatting">Make new groups with friends and enjoy chatting</string>
    <string name="continue2">Continue</string>

    <string name="add_new_aliens">Add new Aliens</string>
    <string name="make_enjoy_with_your_friends">Make enjoy with your aliens friend</string>
    <string name="continue3">Continue</string>

    <string name="discover_new_things">Discover new things</string>
    <string name="enjoy_discovering_with_your_friends">Enjoy Discovering with your friends</string>
    <string name="finish">Finish</string>
    <string name="please_tap">Please Tap</string>
    <string name="make_your_journey_with_friends">Make Your Journey With Friends</string>
    <string name="swap_up">Swap Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="enter_your_email">Enter Your Email.....</string>
    <string name="enter_your_passowrd">Enter Your Passowrd.....</string>
    <string name="confirm_your_passowrd">Confirm Your Passowrd.....</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="middle_name">Middle name</string>
    <string name="register_in">Register in</string>
    <string name="import_key">Import</string>
    <string name="gallery">Gallery</string>
    <string name="games">Games</string>
    <string name="tools">Tools</string>
    <string name="weather">Weather</string>
    <string name="chat">Chat</string>
    <string name="appearance">Appearance</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="call">Call</string>
    <string name="personal">Personal</string>
    <string name="search_in_web">Search in Web</string>
    <string name="message">Message</string>
    <string name="setting2">Setting</string>
    <string name="new_group">New group</string>
    <string name="group_info">Group Info</string>
    <string name="search2">Search</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="other">Other</string>



    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="initial_score">Score 0/13</string>
    <string name="incorrect_toast">Wrong!</string>
    <string name="correct_toast">You got it!</string>
    <string name="question_1">Valentine\'s day is banned in Saudi Arabia.</string>
    <string name="question_2">A slug\'s blood is green.</string>
    <string name="question_3">Approximately one quarter of human bones are in the feet.</string>
    <string name="question_4">The total surface area of two human lungs is approximately 70 square metres.</string>
    <string name="question_5">In West Virginia, USA, if you accidentally hit an animal with your car, you are free to take it home to eat.</string>
    <string name="question_6">In London, UK, if you happen to die in the House of Parliament, you are technically entitled to a state funeral, because the building is considered too sacred a place.</string>
    <string name="question_7">It is illegal to pee in the Ocean in Portugal.</string>
    <string name="question_8">You can lead a cow down stairs but not up stairs.</string>
    <string name="question_9">Google was originally called \"Backrub\".</string>
    <string name="question_10">Buzz Aldrin\'s mother\'s maiden name was \"Moon\".</string>
    <string name="question_11">The loudest sound produced by any animal is 188 decibels. That animal is the African Elephant.</string>
    <string name="question_12">No piece of square dry paper can be folded in half more than 7 times.</string>
    <string name="question_13">Chocolate affects a dog\'s heart and nervous system; a few ounces are enough to kill a small dog.</string>
    <string name="enjoy_playing_games">Enjoy Playing Games</string>
    <string name="play_games">Play Games</string>
    <string name="continue4">continue</string>
    <string name="title_activity_new_navigation__drawer">New_navigation_Drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="language">Language</string>

    <string name="T1_Story">Your car has blown a tire on a winding road in the middle of nowhere with no cell phone reception. You decide to hitchhike. A rusty pickup truck rumbles to a stop next to you. A man with a wide brimmed hat with soulless eyes opens the passenger door for you and asks: \"Need a ride, boy?\". </string>
    <string name="T1_Ans1">I\'ll hop in. Thanks for the help! </string>
    <string name="T1_Ans2">Better ask him if he\'s a murderer first. </string>


    <string name="T2_Story">He nods slowly, unphased by the question.</string>
    <string name="T2_Ans1">At least he\'s honest. I\'ll climb in.</string>
    <string name="T2_Ans2">Wait, I know how to change a tire.</string>


    <string name="T3_Story">As you begin to drive, the stranger starts talking about his relationship with his mother. He gets angrier and angrier by the minute. He asks you to open the glovebox. Inside you find a bloody knife, two severed fingers, and a cassette tape of Elton John. He reaches for the glove box.</string>
    <string name="T3_Ans1">I love Elton John! Hand him the cassette tape.</string>
    <string name="T3_Ans2">It\'s him or me! You take the knife and stab him.</string>


    <string name="T4_End">What? Such a cop out! Did you know traffic accidents are the second leading cause of accidental death for most adult age groups?</string>
    <string name="T5_End">As you smash through the guardrail and careen towards the jagged rocks below you reflect on the dubious wisdom of stabbing someone while they are driving a car you are in.</string>
    <string name="T6_End">You bond with the murderer while crooning verses of "Can you feel the love tonight". He drops you off at the next town. Before you go he asks you if you know any good places to dump bodies. You reply: \"Try the pier.\"</string>
    <string name="Button_start">Let\'s Start</string>
    <string name="Begging">You Only Choice Your Destiny</string>


    <string name="Person">Person</string>
    <string name="search_google">Search google</string>
    <string name="game">Game</string>


    <string name="Message_Frag3">Message</string>
    <string name="Friends_Frag2">Friends</string>
    <string name="Connects_Frag1">Connects</string>


    <string name="type_message">Type Message......</string>
    <string name="block_menu">Block Menu</string>
    <string name="setting_menu">Setting</string>


    <string name="setting_slider">setting_slider</string>



    <string name="open_gallery">Open Gallery</string>
    <string name="save">Save</string>
    <string name="friends">Friends</string>
    <string name="blocks">Blocks</string>
    <string name="followers">Followers</string>




    <string name="other2">Other</string>
    <string name="logout">Logout</string>
    <string name="make_account">Make Account</string>


</resources>
