<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="@string/group_info"
           android:id="@+id/Group_Info"
        android:icon="@drawable/info"/>

    <item android:title="@string/search2"
        android:id="@+id/Search_chat"
        android:icon="@drawable/search"/>

    <item android:title="@string/wallpaper"
        android:id="@+id/Wallpaper"
        android:icon="@drawable/ic_menu_gallery"/>

    <item
        android:title="@string/other"
        android:id="@+id/other"
        >
        <menu>

            <item android:title="@string/setting_slider" android:id="@+id/Setting_chat"/>

         </menu>

    </item>

    <item
        android:id="@+id/searchforthing2"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="Search"
        app:showAsAction="never|always"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
</menu>