<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".Games.Activity.Quizzler_Game">

<ProgressBar
    android:id="@+id/progress_bar"

    android:layout_width="fill_parent"
    android:layout_height="wrap_content"

    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    style="@android:style/Widget.ProgressBar.Horizontal"
    android:indeterminate="false" />

<TextView
    android:id="@+id/score"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:layout_above="@id/progress_bar"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"

    android:textColor="@color/white"
    android:textStyle="bold"
    android:textSize="25sp"
    android:text="@string/initial_score"
    android:padding="10dp"/>

<TextView
    android:id="@+id/question_text_view"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:layout_centerHorizontal="true"
    android:layout_alignParentTop="true"
    android:layout_marginTop="50dp"

    android:gravity="center"
    android:padding="20dp"
    android:text="@string/question_1"
    android:textColor="@color/white"
    android:textStyle="bold"
    android:textSize="30sp" />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:layout_centerHorizontal="true"
    android:layout_above="@id/score"

    android:gravity="center"
    android:padding="20dp"
    android:orientation="horizontal">

    <Button
        android:id="@+id/true_button"

        android:layout_width="150dp"
        android:layout_height="wrap_content"


        android:text="@string/true_button"
        android:background="@color/light_green"/>

    <Button
        android:id="@+id/false_button"

        android:layout_width="150dp"
        android:layout_height="wrap_content"


        android:text="@string/false_button"
        android:background="@color/proswipebtn_red"/>

</LinearLayout>

</RelativeLayout>