<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".back3"
    android:background="@drawable/newback3"
    android:id="@+id/back3">

    <ImageView
        android:id="@+id/icon1"
        android:layout_width="305dp"
        android:layout_height="285dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/alienbackground4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/back2text1"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="48dp"
        android:text="@string/add_new_aliens"

        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon1" />

    <TextView
        android:id="@+id/back2text2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:lineSpacingExtra="6dp"
        android:text="@string/make_enjoy_with_your_friends"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back2text1" />


    <Button
        android:id="@+id/go3"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginBottom="112dp"
        android:background="@drawable/background2"
        android:text="@string/continue3"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/linearlayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="184dp"
        android:layout_marginRight="184dp"
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/go3"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/prev2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="604dp"
        android:background="@android:color/transparent"
        android:onClick="To_back2"
        android:text="Prev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>